// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader Component should render a basic component: basic 1`] = `
<PageHeader>
  <PageHeader>
    <section
      className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
      widget-type="InsightsPageHeader"
    >
      <PageHeaderTitle
        title={
          <span
            className="test"
          >
            lorem
          </span>
        }
      >
        <Title
          className=""
          size="2xl"
          widget-type="InsightsPageHeaderTitle"
        >
          <h1
            className="pf-c-title pf-m-2xl"
            widget-type="InsightsPageHeaderTitle"
          >
             
            <span
              className="test"
            >
              lorem
            </span>
             
          </h1>
        </Title>
      </PageHeaderTitle>
    </section>
  </PageHeader>
</PageHeader>
`;

exports[`PageHeader Component should render string node types: string 1`] = `
<PageHeader>
  <PageHeader>
    <section
      className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
      widget-type="InsightsPageHeader"
    >
      <PageHeaderTitle
        title="dolor sit"
      >
        <Title
          className=""
          size="2xl"
          widget-type="InsightsPageHeaderTitle"
        >
          <h1
            className="pf-c-title pf-m-2xl"
            widget-type="InsightsPageHeaderTitle"
          >
             
            dolor sit
             
          </h1>
        </Title>
      </PageHeaderTitle>
    </section>
  </PageHeader>
</PageHeader>
`;
